# lighthouse-py

./: .gitignore  Cargo.toml  README.md  pyproject.toml
python/lighthouse_ssz/: __init__.py
src/: lib.rs
