[package]
name = "lighthouse-py"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Python bindings for Lighthouse consensus types"
repository = "https://github.com/vero-ciraptor/lighthouse-py"

[lib]
name = "lighthouse_ssz_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
types = { path = "/tmp/lighthouse/consensus/types", package = "types" }
ssz = { package = "ethereum_ssz", version = "0.10" }
ssz_types = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree_hash = "0.12"
hex = "0.4"
bls = { path = "/tmp/lighthouse/crypto/bls", package = "bls" }

[features]
default = []
