[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lighthouse-py"
version = "0.1.0"
description = "Python bindings for Lighthouse consensus types"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "lighthouse_ssz"
